Fix for hack for sub navigation mobile

--- a/cfgov/unprocessed/css/organisms/secondary-navigation.less
+++ b/cfgov/unprocessed/css/organisms/secondary-navigation.less
@@ -134,10 +134,6 @@
                 margin-right: unit( @grid_gutter-width / 2 / @base-font-size-px, em);
 
                 border-top: 1px solid @gray-40;
-
-                li[data-nav-is-active="False"]{
-                    display: none;
-                }
             } );
         }
 
